--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Arrays Intro</title>
   <script src="./script/script.js"></script>
   <script src="./script/arrays.js"></script>
+  <script src="./script/lab51.js"></script>
 </head>
 <body>
   
