--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arrays Intro</title>
-  <script src="./script/script.js"></script>
-  <script src="./script/arrays.js"></script>
-  <script src="./script/lab51.js"></script>
+ 
 </head>
 <body>
   
 </body>
+<script src="./script/script.js"></script>
+<script src="./script/arrays.js"></script>
+<script src="./script/lab51.js"></script>
+<script src="./script/working-with-arrays.js"></script>
 </html>
